--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
@@ -1,10 +1,7 @@
 [% USE HTML %]
 <script type="text/javascript">
       $(document).ready(function() {
-          $('.fancy_link').fancybox({
-              'frameWidth':   600,
-              'frameHeight':  500,
-          });
+          //$('.fancy_link').modal();
       });
 </script>
 <fieldset>
@@ -47,7 +44,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="[% url_prefix %]/admin/ver_novedad.pl?token=[% token %]&id=[% novedad.id %]">
+                                    <a class="fancy_link" href='#' onclick="showNovedad([% novedad.id %]);">
                                         [% novedad.getResumen %] 
                                     </a>
                                 </td>
@@ -105,3 +102,4 @@
 	                ) ;
 	[% END %]
 </div>
+<div id="mostrar_novedad" class="modal hide fade"></div>
