--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
@@ -45,7 +45,7 @@
                     <tr id="[% campo.getId %]" align="center">
                         <td>[% campo.getCampo %]</td>
                         <td class="vista_campo" id="[% campo.getCampo %]">[% campo.getVistaCampo %]</td>
-                        <td align="center">
+                        <td style="width: 110px;">
                         
                             [% PERL %]
                                 print C4::AR::Filtros::action_set_button(    
