--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
@@ -69,7 +69,7 @@
                                   class           => "",
                                   selectAll_id    => "",
                                   columns         => ['[% "Campo"|i18n %]','[% "Subcampo"|i18n %]','[% "Pre"|i18n %]',
-                                                    '[% "Vista en OPAC" | i18n %]','[% "Post"|i18n %]','[% "Nivel"|i18n %]',
+                                                    '[% "Vista INTRA" | i18n %]','[% "Post"|i18n %]','[% "Nivel"|i18n %]',
                                                     '[% "Acciones"|i18n %]',
                                                      ]
 
@@ -87,7 +87,7 @@
                         <td class="editable" id="[% campo.id %]">[% campo.getVistaIntra %]</td>
                         <td id="[% campo.id %]">[% campo.getPost %]</td>
                         <td id="[% campo.id %]">[% campo.getNivel %]</td>
-                        <td >
+                        <td style="width: 110px;">
                             [% PERL %]
                                   print C4::AR::Filtros::action_button( 
                                                                   button       => "btn click btn-danger",
