--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaCampoVisualizacionOpac.tmpl
@@ -32,7 +32,7 @@
                                   id              => "visualizacionOpac_table",
                                   class           => "",
                                   selectAll_id    => "",
-                                  columns         => ['[% "Campo"|i18n %]','[% "Vista Campo"|i18n %]','[% "Acciones"|i18n %]',
+                                  columns         => ['[% "Campo"|i18n %]','[% "Vista OPAC"|i18n %]','[% "Acciones"|i18n %]',
                                                      ]
 
                                                                     
@@ -45,7 +45,7 @@
                     <tr id="[% campo.getId %]" align="center">
                         <td>[% campo.getCampo %]</td>
                         <td class="vista_campo" id="[% campo.getCampo %]">[% campo.getVistaCampo %]</td>
-                        <td align="center">
+                        <td style="width: 110px;">
                                                    
                             [% PERL %]
                                 print C4::AR::Filtros::action_set_button(    
