--- a/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
@@ -33,10 +33,8 @@
             limit: 0,        
             warning: 10,
             counterElement: 'p',
-            css: 'textareaCounter',
-            cssWarning: 'textareaCounterwarning',
-            cssExceeded: 'textareaCounterExceeded',
-            counterText: 'Caraceteres restantes: '    
+            cssExceeded: 'label label-important',
+            counterText: "[% 'Caraceteres restantes' | i18n %]: ",    
         });
  });
 
