--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -180,8 +180,9 @@ var loaderPath= "";
                       <dd>[% socio.persona.getVersion_documento %]&nbsp; [% socio.persona.getNro_documento %]</dd>
 
                       [% IF !(socio.getNro_socio == socio.getNro_documento) %]
-                          <dt class="inline left rightMargin">[% "Tarjeta de identificaci&oacute;n :" | i18n %] </dt>
-                          <dd>[% socio.getNro_socio %]</dd>
+                          <dt class="inline left rightMargin">
+                            [% "Tarjeta de identificaci&oacute;n :" | i18n %]</dt>
+                          <dd><span class="label label-info">[% socio.getNro_socio %]</span></dd>
                       [% END %]
 
                       <dt class="inline left rightMargin">[% "Categor&iacute;a:" | i18n %] </dt>
