--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
@@ -35,6 +35,7 @@ function eleccionSubCampo(){
                                  content   => [ {id => 'base_conf', text=> "[% 'Acciones B&aacute;sicas' | i18n %]" },
                                                 {id => 'matching_conf', text => "[% 'B&uacute;squeda de registros en el Cat&aacute;logo' | i18n %]"},
                                                 {id => 'relacion_conf', text => "[% 'Relacion Registro/Ejemplar' | i18n %]"},
+                                                {id => 'referencias_conf', text => "[% 'Buscar Referencias' | i18n %]"},
                                               ],
                                  content_id=> ['configuracion_importacion'],
                                  active_id => 'base_conf',
@@ -94,8 +95,17 @@ function eleccionSubCampo(){
                         <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
               </select>
               <strong><span id="nombre_subcampo"></span></strong>
+              
            <input type='button' name="+" id="+" value="+" onclick="agregarCampoReglasMatcheo()">
 
+         [% PERL %]
+                             print C4::AR::Filtros::action_button( 
+                                                                 button   => "btn btn-primary",
+                                                                 icon	  => "icon-plus",
+                                                                 action => 'agregarCampoReglasMatcheo();',
+                                     ) ;
+         [% END %]
+         
            </li>
            </ol>
            <input type='hidden'name="lista_reglas_matcheo" id="lista_reglas_matcheo" value="[% importacion.getReglasMatcheo %]">
